Remove some SuppressWarnings